/*
 * File: autd3.proto
 * Project: proto
 * Created Date: 26/06/2023
 * Author: Shun Suzuki
 * -----
 * Last Modified: 28/06/2023
 * Modified By: Shun Suzuki (suzuki@hapis.k.u-tokyo.ac.jp)
 * -----
 * Copyright (c) 2023 Shun Suzuki. All rights reserved.
 *
 */

syntax = "proto3";

package autd3;

message TxRawData { bytes data = 1; }
message SendResponse { bool success = 1; }

message ReadRequest {}
message RxMessage { bytes data = 1; }

message CloseRequest {}
message CloseResponse { bool success = 1; }

message Vector3 {
  double x = 1;
  double y = 2;
  double z = 3;
}

message Quaternion {
  double w = 1;
  double x = 2;
  double y = 3;
  double z = 4;
}

message Geometry {
  message AUTD3 {
    Vector3 position = 1;
    Quaternion rotation = 2;
  }
  repeated AUTD3 geometries = 1;
}

message GeometryResponse {}

message SimulatorTx {
  oneof data {
    Geometry geometry = 1;
    TxRawData raw = 2;
    ReadRequest read = 8;
    CloseRequest close = 9;
  }
}

message SimulatorRx {
  oneof data {
    RxMessage rx = 1;
    GeometryResponse geometry = 2;
  }
}

service Simulator {
  rpc ReceiveData(stream SimulatorTx) returns (stream SimulatorRx);
}

service ECAT {
  rpc SendData(TxRawData) returns (SendResponse) {}
  rpc ReadData(ReadRequest) returns (RxMessage) {}
  rpc Close(CloseRequest) returns (CloseResponse) {}
}
